<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/textData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tips"
        android:maxLines="5" />

    <RadioGroup
        android:id="@+id/RadioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/SHIPAI"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:checked="true"
            android:text="石牌校区" />

        <RadioButton
            android:id="@+id/Else"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="大学城/南海校区" />
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabButton"
        app:backgroundTint="#F7D7C8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done"
        app:elevation="8dp" />


</LinearLayout>